Archive/1bb2b742dec042ab8b7201f766e075ba-d6c803482d553f395422ddf5510f4bb0/output
main.cpp: In member function ‘stream::flags_type stream::flags(stream::flags_type)’:
main.cpp:19:14: error: ‘exchange’ is not a member of ‘std’
     { return std::exchange(flags_, newf); }
              ^
main.cpp: In function ‘int main()’:
main.cpp:42:4: error: ‘exchange’ is not a member of ‘std’
    std::exchange(v, {1,2,3,4});
    ^
main.cpp:53:4: error: ‘exchange’ is not a member of ‘std’
    std::exchange(fun,f);
    ^
main.cpp: In member function ‘stream::flags_type stream::flags(stream::flags_type)’:
main.cpp:19:43: warning: control reaches end of non-void function [-Wreturn-type]
     { return std::exchange(flags_, newf); }
                                           ^
